<resources>
    <string name="app_name">SWE_Project</string>
    <string name="title_activity_user_layout">user_layout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="url">http://192.168.1.9:8000</string>

    <string name="urlsam">http://192.168.1.7:8000</string>

    <string name="title_activity_user">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_community">Community</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="fill_details">Fill Details</string>
    <string name="done">done</string>
    <string name="enter_details_for_donation">enter_details_for_donation</string>
    <string name="add_details">add_details</string>
    <string name="enter_details">ENTER DETAILS</string>
    <string name="title_activity_maps2">Map</string>

</resources>